add img line index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		content.......<br>
 		content.......<br>
 		content.......<br>
+		<image src="cat.jpeg">
 		content.......<br>
 		</p>
 	</body>
