--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		content.......<br>
 		content.......<br>
 		content.......<br>
-		<image src="./cat.jpg">
+		<image src="cat.jpg">
 		content.......<br>
 		</p>
 	</body>
