--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		content.......<br>
 		content.......<br>
 		content.......<br>
-		<image src="cat.jpg" width"200 height="150">
+		<image src="cat.jpg" width"200" height="150">
 		content.......<br>
 		</p>
 	</body>
