--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <html>
-	<head>
-		<title>ji's website</title>
-	</head>
 	<body>
-		<H1>ji's web site test</H1>
-		content.......<br>
-		content.......<br>
-		<hr>
-		<h2>oao</h2>
-		<p>
-		content.......<br>
-		content.......<br>
-		content.......<br>
-		content.......<br>
-		</p>
+		kor,eng,math.......<br>
+		1,2,3.......<br>
+		4,5,6,.......<br>
+		7,8,9.......<br>
+		10,11,12.......<br>
+		13,14,15.......<br>
 	</body>
 </html>
