--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<html>
-	<body>
-		kor,eng,math.......<br>
-		1,2,3.......<br>
-		4,5,6,.......<br>
-		7,8,9.......<br>
-		10,11,12.......<br>
-		13,14,15.......<br>
-	</body>
-</html>
+kor,eng,math
+1,2,3
+4,5,6
+7,8,9
+10,11,12
+13,14,15
